Make hamburger icon bigger and more visible

--- a/shop.html
+++ b/shop.html
@@ -729,18 +729,19 @@
         .hamburger {
             display: none;
             flex-direction: column;
-            gap: 4px;
+            gap: 5px;
             cursor: pointer;
-            padding: 4px;
+            padding: 8px;
             background: none;
             border: none;
+            margin-left: 4px;
         }
 
         .hamburger span {
-            width: 18px;
-            height: 2px;
+            width: 20px;
+            height: 2.5px;
             background: #0A1628;
-            border-radius: 1px;
+            border-radius: 2px;
         }
 
         .mobile-menu {
