--- a/shop.html
+++ b/shop.html
@@ -512,7 +512,7 @@
         }
 
         .category-neuropeptides { background: #EFF6FF; color: #2563EB; border: 1px solid #BFDBFE; }
-        .category-glp { background: #F0FDF4; color: #16A34A; border: 1px solid #BBF7D0; }
+        .category-glp { background: #EFF6FF; color: #2B7DE9; border: 1px solid #93C5FD; }
         .category-gh { background: #FEF3C7; color: #CA8A04; border: 1px solid #FDE68A; }
         .category-tissue { background: #FCE7F3; color: #DB2777; border: 1px solid #FBCFE8; }
         .category-metabolic { background: #FEF2F2; color: #DC2626; border: 1px solid #FECACA; }
@@ -827,8 +827,8 @@
                 </nav>
             </div>
             <div class="nav-icons">
-                <button class="nav-icon" onclick="toggleSearch()" title="Search">🔍</button>
-                <button class="nav-icon" title="Cart">🛒<span class="cart-badge">0</span></button>
+                <button class="nav-icon" onclick="toggleSearch()" title="Search"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="M21 21l-4.35-4.35"/></svg></button>
+                <button class="nav-icon" title="Cart"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 002 1.61h9.72a2 2 0 002-1.61L23 6H6"/></svg><span class="cart-badge">0</span></button>
                 <button class="hamburger" onclick="toggleMobileMenu()"><span></span><span></span><span></span></button>
             </div>
         </div>
