--- a/shop.html
+++ b/shop.html
@@ -511,15 +511,15 @@
             margin-bottom: 0.75rem;
         }
 
-        .category-glp { background: #EFF6FF; color: #2B7DE9; border: 1px solid #93C5FD; }
+        .category-glp { background: #EFF6FF; color: #2563EB; border: 1px solid #93C5FD; }
         .category-tissue { background: #ECFDF5; color: #059669; border: 1px solid #6EE7B7; }
         .category-gh { background: #FFF7ED; color: #EA580C; border: 1px solid #FDBA74; }
-        .category-metabolic { background: #FFFBEB; color: #D97706; border: 1px solid #FCD34D; }
+        .category-metabolic { background: #FEF2F2; color: #DC2626; border: 1px solid #FCA5A5; }
         .category-antioxidants { background: #F5F3FF; color: #7C3AED; border: 1px solid #DDD6FE; }
-        .category-neuropeptides { background: #EEF2FF; color: #4F46E5; border: 1px solid #A5B4FC; }
-        .category-longevity { background: #F0FDFA; color: #0D9488; border: 1px solid #99F6E4; }
-        .category-melanocortin { background: #FFF1F2; color: #E11D48; border: 1px solid #FDA4AF; }
-        .category-cosmetic { background: #FDF4FF; color: #C026D3; border: 1px solid #F5D0FE; }
+        .category-neuropeptides { background: #ECFEFF; color: #0891B2; border: 1px solid #67E8F9; }
+        .category-longevity { background: #FFFBEB; color: #B45309; border: 1px solid #FCD34D; }
+        .category-melanocortin { background: #FDF2F8; color: #DB2777; border: 1px solid #F9A8D4; }
+        .category-cosmetic { background: #FDF4FF; color: #A21CAF; border: 1px solid #E879F9; }
         .category-advanced { background: #F1F5F9; color: #475569; border: 1px solid #CBD5E1; }
 
         .product-name {
