Rename footer link to Resources

--- a/shop.html
+++ b/shop.html
@@ -1047,7 +1047,7 @@
         <a href="#shop" onclick="toggleMobileMenu()">Shop</a>
         <a href="#" onclick="openPage('faq');toggleMobileMenu();return false">FAQ</a>
         <a href="#" onclick="openPage('about');toggleMobileMenu();return false">About</a>
-        <a href="https://peptideresourcecenter.com" target="_blank">Peptide Resource Center ↗</a>
+        <a href="https://peptideresourcecenter.com" target="_blank">Resources ↗</a>
         <a href="mailto:support@prcpeptides.com">Contact</a>
     </div>
 
@@ -1195,7 +1195,7 @@
             <div class="about-section">
                 <h3>Contact</h3>
                 <p>Email: <a href="mailto:support@prcpeptides.com" style="color:#2B7DE9">support@prcpeptides.com</a></p>
-                <p>Resources: <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9">Peptide Resource Center ↗</a></p>
+                <p>Resources: <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9">Resources ↗</a></p>
             </div>
         </div>
     </div>
@@ -1208,7 +1208,7 @@
                 <a href="#shop">Shop</a>
                 <a href="#" onclick="openPage('faq');return false">FAQ</a>
                 <a href="#" onclick="openPage('about');return false">About</a>
-                <a href="https://peptideresourcecenter.com" target="_blank">Peptide Resource Center ↗</a>
+                <a href="https://peptideresourcecenter.com" target="_blank">Resources ↗</a>
                 <a href="mailto:support@prcpeptides.com">support@prcpeptides.com</a>
             </div>
             <div class="footer-disclaimer">
