Add free supply kit banner + trust bar item

--- a/shop.html
+++ b/shop.html
@@ -1063,8 +1063,8 @@
     <section class="trust-bar">
         <div class="trust-content">
             <div class="trust-item">≥98% Purity</div>
+            <div class="trust-item">Free Supply Kit</div>
             <div class="trust-item">Fast Shipping</div>
-            <div class="trust-item">Secure Payment</div>
             <div class="trust-item">Research Use Only</div>
         </div>
     </section>
@@ -1078,6 +1078,15 @@
                 <!-- Featured products will be inserted here by JS -->
             </div>
         </section>
+
+        <!-- Supply Kit Banner -->
+        <div style="background:linear-gradient(135deg,#EFF6FF,#F0FDFA);border:1px solid #E2E8F0;border-radius:10px;padding:16px 20px;margin:0 auto 2rem;max-width:1200px;display:flex;align-items:center;gap:16px;flex-wrap:wrap">
+            <div style="flex:1;min-width:200px">
+                <div style="font-weight:700;font-size:0.95rem;color:#0A1628;margin-bottom:4px">Complimentary Research Supply Kit</div>
+                <div style="font-size:0.8rem;color:#64748B;line-height:1.5">Every order includes bacteriostatic water, syringes, and alcohol swabs — everything you need to start your research.</div>
+            </div>
+            <div style="font-size:0.75rem;font-weight:600;color:#2B7DE9;white-space:nowrap">Included Free ✓</div>
+        </div>
 
         <!-- Shop by Category Section -->
         <section class="categories-section">
