Add top promo bar: free shipping over 150 + supply kit

--- a/shop.html
+++ b/shop.html
@@ -1004,6 +1004,9 @@
     </div>
 
     <!-- Header -->
+    <!-- Promo Bar -->
+    <div style="background:#0A1628;text-align:center;padding:8px 16px;font-size:0.75rem;color:rgba(255,255,255,0.85);letter-spacing:0.3px;font-weight:500" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150 &nbsp;|&nbsp; Complimentary research supply kit with every order</div>
+
     <header>
         <div class="header-content">
             <div class="header-left">
