--- a/shop.html
+++ b/shop.html
@@ -398,52 +398,57 @@
         .featured-products::-webkit-scrollbar { height: 0; }
 
         .featured-card {
-            background: #F8FAFC;
+            background: #FFFFFF;
             border: 1px solid #E2E8F0;
-            border-radius: 10px;
-            padding: 1.25rem;
-            min-width: 280px;
+            border-left: 3px solid #2B7DE9;
+            border-radius: 8px;
+            padding: 12px 14px;
+            min-width: 200px;
             flex-shrink: 0;
             cursor: pointer;
             transition: all 0.2s;
         }
 
         .featured-card:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-            border-color: #2B7DE9;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.06);
+            border-left-color: #06B6D4;
         }
 
         .featured-card .product-category {
             display: inline-block;
-            font-size: 0.7rem;
+            font-size: 0.6rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            padding: 0.25rem 0.75rem;
-            border-radius: 4px;
-            margin-bottom: 0.75rem;
+            padding: 2px 8px;
+            border-radius: 3px;
+            margin-bottom: 6px;
         }
 
         .featured-card .product-name {
-            font-size: 1.125rem;
+            font-size: 0.9rem;
             font-weight: 700;
             color: #0A1628;
-            margin-bottom: 0.5rem;
+            margin-bottom: 4px;
         }
 
         .featured-card .product-description {
-            font-size: 0.85rem;
+            font-size: 0.72rem;
             color: #64748B;
-            margin-bottom: 1rem;
-            line-height: 1.5;
+            margin-bottom: 8px;
+            line-height: 1.4;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
 
         .featured-card .view-details {
             display: inline-block;
             color: #2B7DE9;
             font-weight: 600;
-            font-size: 0.875rem;
+            font-size: 0.75rem;
             text-decoration: none;
         }
 
@@ -909,7 +914,7 @@
             .hero p { font-size: 0.8rem; }
             .hero { padding: 1.25rem 1rem; }
             .section-heading { font-size: 1.25rem; }
-            .featured-card { min-width: 260px; }
+            .featured-card { min-width: 180px; }
             nav { display: none; }
             .header-left { gap: 0; }
             .trust-item { font-size: 0.6rem; padding: 0 8px; }
@@ -1005,7 +1010,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div style="background:#0A1628;text-align:center;padding:8px 16px;font-size:0.75rem;color:rgba(255,255,255,0.85);letter-spacing:0.3px;font-weight:500" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150 &nbsp;|&nbsp; Complimentary research supply kit with every order</div>
+    <div style="background:#0A1628;text-align:center;padding:8px 16px;font-size:0.75rem;color:rgba(255,255,255,0.85);letter-spacing:0.3px;font-weight:500" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150 &nbsp;|&nbsp; Free reconstitution supplies with every order</div>
 
     <header>
         <div class="header-content">
@@ -1066,7 +1071,7 @@
     <section class="trust-bar">
         <div class="trust-content">
             <div class="trust-item">≥98% Purity</div>
-            <div class="trust-item">Free Supply Kit</div>
+            <div class="trust-item">Free Recon Supplies</div>
             <div class="trust-item">Fast Shipping</div>
             <div class="trust-item">Research Use Only</div>
         </div>
@@ -1085,8 +1090,8 @@
         <!-- Supply Kit Banner -->
         <div style="background:linear-gradient(135deg,#EFF6FF,#F0FDFA);border:1px solid #E2E8F0;border-radius:10px;padding:16px 20px;margin:0 auto 2rem;max-width:1200px;display:flex;align-items:center;gap:16px;flex-wrap:wrap">
             <div style="flex:1;min-width:200px">
-                <div style="font-weight:700;font-size:0.95rem;color:#0A1628;margin-bottom:4px">Complimentary Research Supply Kit</div>
-                <div style="font-size:0.8rem;color:#64748B;line-height:1.5">Every order includes bacteriostatic water, syringes, and alcohol swabs — everything you need to start your research.</div>
+                <div style="font-weight:700;font-size:0.95rem;color:#0A1628;margin-bottom:4px">Free Reconstitution Supplies</div>
+                <div style="font-size:0.8rem;color:#64748B;line-height:1.5">Every order includes bacteriostatic water and reconstitution supplies — everything you need to prepare your research compounds.</div>
             </div>
             <div style="font-size:0.75rem;font-weight:600;color:#2B7DE9;white-space:nowrap">Included Free ✓</div>
         </div>
