--- a/shop.html
+++ b/shop.html
@@ -377,14 +377,22 @@
 
         /* Featured Products Section */
         .featured-section {
-            padding: 2rem 0 2.5rem;
+            padding: 1.5rem 0 1.75rem;
         }
 
         .section-heading {
-            font-size: 1.5rem;
+            font-size: 1.1rem;
             font-weight: 700;
             color: #0A1628;
-            margin-bottom: 1.25rem;
+            margin-bottom: 1rem;
+            letter-spacing: -0.3px;
+        }
+
+        .section-sub {
+            font-size: 0.75rem;
+            color: #94A3B8;
+            font-weight: 400;
+            margin-left: 8px;
         }
 
         .featured-products {
@@ -454,8 +462,8 @@
 
         /* Shop by Category Section */
         .categories-section {
-            padding: 2rem 0 2.5rem;
-            border-top: 1px solid #E2E8F0;
+            padding: 1.5rem 0 1.75rem;
+            border-top: 1px solid #F1F5F9;
         }
 
         .category-grid {
@@ -468,26 +476,29 @@
             background: #FFFFFF;
             border: 1px solid #E2E8F0;
             border-radius: 8px;
-            padding: 1rem;
+            padding: 10px 12px;
             cursor: pointer;
             transition: all 0.2s;
-            border-left-width: 3px;
+            border-left: 3px solid;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .category-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 16px rgba(0,0,0,0.06);
+            transform: translateY(-1px);
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
         .category-card-name {
-            font-size: 0.95rem;
-            font-weight: 700;
-            margin-bottom: 0.25rem;
+            font-size: 0.8rem;
+            font-weight: 600;
         }
 
         .category-card-count {
-            font-size: 0.75rem;
-            color: #64748B;
+            font-size: 0.65rem;
+            color: #94A3B8;
+            font-weight: 500;
         }
 
         /* Category-specific borders and colors */
@@ -523,8 +534,8 @@
 
         /* Catalog Section */
         .catalog-section {
-            padding: 2rem 0 0;
-            border-top: 1px solid #E2E8F0;
+            padding: 1.5rem 0 0;
+            border-top: 1px solid #F1F5F9;
         }
 
         .catalog-header {
@@ -592,26 +603,26 @@
             border: 1px solid #E2E8F0;
             border-left: 3px solid #2B7DE9;
             border-radius: 8px;
-            padding: 1rem;
+            padding: 12px;
             transition: all 0.2s;
             cursor: pointer;
         }
 
         .product-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
             border-left-color: #06B6D4;
         }
 
         .product-category {
             display: inline-block;
-            font-size: 0.7rem;
+            font-size: 0.6rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            padding: 0.25rem 0.75rem;
-            border-radius: 4px;
-            margin-bottom: 0.5rem;
+            padding: 2px 8px;
+            border-radius: 3px;
+            margin-bottom: 6px;
         }
 
         .category-glp { background: #EFF6FF; color: #2563EB; border: 1px solid #93C5FD; }
@@ -626,24 +637,28 @@
         .category-advanced { background: #F1F5F9; color: #475569; border: 1px solid #CBD5E1; }
 
         .product-name {
-            font-size: 1rem;
+            font-size: 0.88rem;
             font-weight: 700;
             color: #0A1628;
-            margin-bottom: 0.5rem;
+            margin-bottom: 4px;
         }
 
         .product-description {
-            font-size: 0.8rem;
+            font-size: 0.72rem;
             color: #64748B;
-            margin-bottom: 0.75rem;
-            line-height: 1.5;
+            margin-bottom: 8px;
+            line-height: 1.45;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
 
         .view-details {
             display: inline-block;
             color: #2B7DE9;
             font-weight: 600;
-            font-size: 0.8rem;
+            font-size: 0.72rem;
             text-decoration: none;
             transition: color 0.2s;
         }
@@ -913,7 +928,8 @@
             .hero h1 { font-size: 1.3rem; }
             .hero p { font-size: 0.8rem; }
             .hero { padding: 1.25rem 1rem; }
-            .section-heading { font-size: 1.25rem; }
+            .section-heading { font-size: 1rem; }
+            .section-sub { display: none; }
             .featured-card { min-width: 180px; }
             nav { display: none; }
             .header-left { gap: 0; }
@@ -1081,19 +1097,19 @@
     <main id="shop">
         <!-- Featured Products Section -->
         <section class="featured-section">
-            <h2 class="section-heading">Popular Products</h2>
+            <h2 class="section-heading">Popular<span class="section-sub">Bestsellers</span></h2>
             <div class="featured-products" id="featuredProducts">
                 <!-- Featured products will be inserted here by JS -->
             </div>
         </section>
 
         <!-- Supply Kit Banner -->
-        <div style="background:linear-gradient(135deg,#EFF6FF,#F0FDFA);border:1px solid #E2E8F0;border-radius:10px;padding:16px 20px;margin:0 auto 2rem;max-width:1200px;display:flex;align-items:center;gap:16px;flex-wrap:wrap">
-            <div style="flex:1;min-width:200px">
-                <div style="font-weight:700;font-size:0.95rem;color:#0A1628;margin-bottom:4px">Free Reconstitution Supplies</div>
-                <div style="font-size:0.8rem;color:#64748B;line-height:1.5">Every order includes bacteriostatic water and reconstitution supplies — everything you need to prepare your research compounds.</div>
+        <div style="background:#F8FAFC;border:1px solid #E2E8F0;border-radius:8px;padding:12px 16px;margin:0 auto 1.5rem;max-width:1200px;display:flex;align-items:center;gap:12px">
+            <div style="flex:1">
+                <span style="font-weight:600;font-size:0.8rem;color:#0A1628">Free Reconstitution Supplies</span>
+                <span style="font-size:0.72rem;color:#64748B"> — Bac water & supplies included with every order</span>
             </div>
-            <div style="font-size:0.75rem;font-weight:600;color:#2B7DE9;white-space:nowrap">Included Free ✓</div>
+            <span style="font-size:0.65rem;font-weight:600;color:#059669;white-space:nowrap">Included ✓</span>
         </div>
 
         <!-- Shop by Category Section -->
