Add reconstitution kit FAQ entry

--- a/shop.html
+++ b/shop.html
@@ -1182,6 +1182,10 @@
                 <div class="faq-a">All of our peptides are manufactured to ≥98% purity by GMP-compliant facilities. Each product undergoes rigorous quality control testing before being made available.</div>
             </div>
             <div class="faq-item" onclick="this.classList.toggle('open')">
+                <div class="faq-q">What's included with my order?</div>
+                <div class="faq-a">Every order ships with a complimentary reconstitution kit containing bacteriostatic water and standard laboratory preparation supplies — everything needed to prepare your research compounds.</div>
+            </div>
+            <div class="faq-item" onclick="this.classList.toggle('open')">
                 <div class="faq-q">How do I place an order?</div>
                 <div class="faq-a">Browse our catalog, add items to your cart, and proceed to checkout. We accept multiple payment methods including cryptocurrency. For questions about ordering, email us at support@prcpeptides.com.</div>
             </div>
