--- a/shop.html
+++ b/shop.html
@@ -337,12 +337,13 @@
             font-size: 0.85rem;
             color: rgba(255,255,255,0.85);
             margin: 0;
+            letter-spacing: 0.3px;
         }
 
         /* Trust Bar */
         .trust-bar {
-            background: #0A1628;
-            padding: 10px 16px;
+            background: #0F172A;
+            padding: 8px 16px;
             border-bottom: none;
         }
 
@@ -356,12 +357,12 @@
         }
 
         .trust-item {
-            font-size: 0.7rem;
+            font-size: 0.65rem;
             font-weight: 600;
             color: rgba(255,255,255,0.8);
             text-align: center;
             letter-spacing: 0.3px;
-            padding: 0 12px;
+            padding: 0 10px;
         }
 
         .trust-item + .trust-item {
@@ -377,15 +378,15 @@
 
         /* Featured Products Section */
         .featured-section {
-            padding: 1.5rem 0 1.75rem;
+            padding: 1.25rem 0 1.25rem;
         }
 
         .section-heading {
-            font-size: 1.1rem;
+            font-size: 0.95rem;
             font-weight: 700;
             color: #0A1628;
-            margin-bottom: 1rem;
-            letter-spacing: -0.3px;
+            margin-bottom: 0.75rem;
+            letter-spacing: -0.2px;
         }
 
         .section-sub {
@@ -426,12 +427,11 @@
         .featured-card .product-category {
             display: inline-block;
             font-size: 0.6rem;
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            padding: 2px 8px;
-            border-radius: 3px;
-            margin-bottom: 6px;
+            padding: 0;
+            margin-bottom: 4px;
         }
 
         .featured-card .product-name {
@@ -462,7 +462,7 @@
 
         /* Shop by Category Section */
         .categories-section {
-            padding: 1.5rem 0 1.75rem;
+            padding: 1.25rem 0 1.25rem;
             border-top: 1px solid #F1F5F9;
         }
 
@@ -617,24 +617,23 @@
         .product-category {
             display: inline-block;
             font-size: 0.6rem;
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            padding: 2px 8px;
-            border-radius: 3px;
-            margin-bottom: 6px;
+            padding: 0;
+            margin-bottom: 4px;
         }
 
-        .category-glp { background: #EFF6FF; color: #2563EB; border: 1px solid #93C5FD; }
-        .category-tissue { background: #ECFDF5; color: #059669; border: 1px solid #6EE7B7; }
-        .category-gh { background: #FFF7ED; color: #EA580C; border: 1px solid #FDBA74; }
-        .category-metabolic { background: #FEF2F2; color: #DC2626; border: 1px solid #FCA5A5; }
-        .category-antioxidants { background: #F5F3FF; color: #7C3AED; border: 1px solid #DDD6FE; }
-        .category-neuropeptides { background: #ECFEFF; color: #0891B2; border: 1px solid #67E8F9; }
-        .category-longevity { background: #FFFBEB; color: #B45309; border: 1px solid #FCD34D; }
-        .category-melanocortin { background: #FDF2F8; color: #DB2777; border: 1px solid #F9A8D4; }
-        .category-cosmetic { background: #FDF4FF; color: #A21CAF; border: 1px solid #E879F9; }
-        .category-advanced { background: #F1F5F9; color: #475569; border: 1px solid #CBD5E1; }
+        .category-glp { color: #2563EB; }
+        .category-tissue { color: #059669; }
+        .category-gh { color: #EA580C; }
+        .category-metabolic { color: #DC2626; }
+        .category-antioxidants { color: #7C3AED; }
+        .category-neuropeptides { color: #0891B2; }
+        .category-longevity { color: #B45309; }
+        .category-melanocortin { color: #DB2777; }
+        .category-cosmetic { color: #A21CAF; }
+        .category-advanced { color: #475569; }
 
         .product-name {
             font-size: 0.88rem;
@@ -652,6 +651,7 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            word-break: break-word;
         }
 
         .view-details {
@@ -933,7 +933,7 @@
             .featured-card { min-width: 180px; }
             nav { display: none; }
             .header-left { gap: 0; }
-            .trust-item { font-size: 0.6rem; padding: 0 8px; }
+            .trust-item { font-size: 0.55rem; padding: 0 6px; }
             .hamburger { display: flex !important; }
         }
 
@@ -1026,7 +1026,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div style="background:#0A1628;text-align:center;padding:8px 16px;font-size:0.75rem;color:rgba(255,255,255,0.85);letter-spacing:0.3px;font-weight:500" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150 &nbsp;|&nbsp; Free reconstitution supplies with every order</div>
+    <div style="background:#0A1628;text-align:center;padding:7px 16px;font-size:0.7rem;color:rgba(255,255,255,0.85);letter-spacing:0.3px;font-weight:500" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150</div>
 
     <header>
         <div class="header-content">
@@ -1079,7 +1079,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Research-Grade Peptides</h1>
-            <p>44+ compounds · ≥98% purity · Fast US shipping</p>
+            <p>44+ compounds for in vitro research · Free reconstitution supplies with every order</p>
         </div>
     </section>
 
@@ -1087,9 +1087,10 @@
     <section class="trust-bar">
         <div class="trust-content">
             <div class="trust-item">≥98% Purity</div>
-            <div class="trust-item">Free Recon Supplies</div>
-            <div class="trust-item">Fast Shipping</div>
-            <div class="trust-item">Research Use Only</div>
+            <div class="trust-item">Free Supplies</div>
+            <div class="trust-item">Fast US Shipping</div>
+            <div class="trust-item">Crypto Accepted</div>
+            <div class="trust-item">Research Only</div>
         </div>
     </section>
 
@@ -1097,20 +1098,11 @@
     <main id="shop">
         <!-- Featured Products Section -->
         <section class="featured-section">
-            <h2 class="section-heading">Popular<span class="section-sub">Bestsellers</span></h2>
+            <h2 class="section-heading">Popular</h2>
             <div class="featured-products" id="featuredProducts">
                 <!-- Featured products will be inserted here by JS -->
             </div>
         </section>
-
-        <!-- Supply Kit Banner -->
-        <div style="background:#F8FAFC;border:1px solid #E2E8F0;border-radius:8px;padding:12px 16px;margin:0 auto 1.5rem;max-width:1200px;display:flex;align-items:center;gap:12px">
-            <div style="flex:1">
-                <span style="font-weight:600;font-size:0.8rem;color:#0A1628">Free Reconstitution Supplies</span>
-                <span style="font-size:0.72rem;color:#64748B"> — Bac water & supplies included with every order</span>
-            </div>
-            <span style="font-size:0.65rem;font-weight:600;color:#059669;white-space:nowrap">Included ✓</span>
-        </div>
 
         <!-- Shop by Category Section -->
         <section class="categories-section">
