--- a/shop.html
+++ b/shop.html
@@ -411,8 +411,8 @@
             border: 1px solid #E2E8F0;
             border-left: 3px solid #2B7DE9;
             border-radius: 8px;
-            padding: 12px 14px;
-            min-width: 200px;
+            padding: 10px 12px;
+            min-width: 160px;
             flex-shrink: 0;
             cursor: pointer;
             transition: all 0.2s;
@@ -435,28 +435,21 @@
         }
 
         .featured-card .product-name {
-            font-size: 0.9rem;
+            font-size: 0.82rem;
             font-weight: 700;
             color: #0A1628;
             margin-bottom: 4px;
         }
 
         .featured-card .product-description {
-            font-size: 0.72rem;
-            color: #64748B;
-            margin-bottom: 8px;
-            line-height: 1.4;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
+            display: none;
         }
 
         .featured-card .view-details {
             display: inline-block;
             color: #2B7DE9;
             font-weight: 600;
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             text-decoration: none;
         }
 
@@ -534,7 +527,7 @@
 
         /* Catalog Section */
         .catalog-section {
-            padding: 1.5rem 0 0;
+            padding: 1rem 0 0;
             border-top: 1px solid #F1F5F9;
         }
 
@@ -1104,14 +1097,6 @@
             </div>
         </section>
 
-        <!-- Shop by Category Section -->
-        <section class="categories-section">
-            <h2 class="section-heading">Shop by Category</h2>
-            <div class="category-grid" id="categoryGrid">
-                <!-- Category cards will be inserted here by JS -->
-            </div>
-        </section>
-
         <!-- Catalog Section -->
         <section class="catalog-section" id="categories">
             <div class="catalog-header">
@@ -1675,7 +1660,7 @@
             // Update catalog count
             var countEl = document.getElementById('catalogCount');
             if (countEl) {
-                countEl.textContent = filtered.length + ' product' + (filtered.length !== 1 ? 's' : '');
+                countEl.textContent = filtered.length + (filtered.length === 1 ? ' product' : ' products');
             }
 
             filtered.forEach(function(product) {
@@ -1830,7 +1815,6 @@
         // Initial render
         checkAgeGate();
         renderFeaturedProducts();
-        renderCategories();
         renderProducts('all');
     </script>
 </body>
