--- a/shop.html
+++ b/shop.html
@@ -18,6 +18,17 @@
             line-height: 1.6;
         }
 
+        /* Promo Bar */
+        .promo-bar {
+            background: #0A1628;
+            text-align: center;
+            padding: 6px 16px;
+            font-size: 0.68rem;
+            color: rgba(255,255,255,0.9);
+            letter-spacing: 0.3px;
+            font-weight: 500;
+        }
+
         /* Header */
         header {
             background: #FFFFFF;
@@ -26,6 +37,13 @@
             position: sticky;
             top: 0;
             z-index: 100;
+            box-shadow: 0 1px 3px rgba(0,0,0,0);
+            transition: box-shadow 0.2s;
+        }
+
+        header.scrolled {
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            border-bottom-color: transparent;
         }
 
         .header-content {
@@ -314,10 +332,10 @@
             line-height: 1.7;
         }
 
-        /* Compact Hero */
+        /* Hero */
         .hero {
-            background: linear-gradient(135deg, #3B82F6 0%, #2563EB 100%);
-            padding: 1.5rem 1rem;
+            background: linear-gradient(135deg, #1E40AF 0%, #2563EB 50%, #3B82F6 100%);
+            padding: 1.25rem 1rem;
             text-align: center;
         }
 
@@ -327,24 +345,25 @@
         }
 
         .hero h1 {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             font-weight: 700;
             color: #FFFFFF;
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.2rem;
+            letter-spacing: -0.3px;
         }
 
         .hero p {
-            font-size: 0.85rem;
-            color: rgba(255,255,255,0.85);
+            font-size: 0.78rem;
+            color: rgba(255,255,255,0.8);
             margin: 0;
-            letter-spacing: 0.3px;
+            letter-spacing: 0.2px;
         }
 
         /* Trust Bar */
         .trust-bar {
-            background: #0F172A;
+            background: #F8FAFC;
             padding: 8px 16px;
-            border-bottom: none;
+            border-bottom: 1px solid #E2E8F0;
         }
 
         .trust-content {
@@ -357,16 +376,22 @@
         }
 
         .trust-item {
-            font-size: 0.72rem;
+            font-size: 0.68rem;
             font-weight: 600;
-            color: rgba(255,255,255,0.9);
+            color: #475569;
             text-align: center;
-            letter-spacing: 0.3px;
+            letter-spacing: 0.2px;
             padding: 0 16px;
         }
 
+        .trust-item::before {
+            content: '✓ ';
+            color: #059669;
+            font-weight: 700;
+        }
+
         .trust-item + .trust-item {
-            border-left: 1px solid rgba(255,255,255,0.15);
+            border-left: 1px solid #E2E8F0;
         }
 
         /* Main Content */
@@ -398,10 +423,10 @@
 
         .featured-products {
             display: flex;
-            gap: 1rem;
+            gap: 8px;
             overflow-x: auto;
             -webkit-overflow-scrolling: touch;
-            padding-bottom: 8px;
+            padding-bottom: 4px;
         }
 
         .featured-products::-webkit-scrollbar { height: 0; }
@@ -540,16 +565,17 @@
 
         /* Category Filter */
         .filter-section {
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
             position: sticky;
-            top: 49px;
+            top: 47px;
             background: #FFFFFF;
             z-index: 90;
-            padding: 8px 0 4px;
+            padding: 10px 0 6px;
             margin-left: -1rem;
             margin-right: -1rem;
             padding-left: 1rem;
             padding-right: 1rem;
+            border-bottom: 1px solid transparent;
         }
 
         .filter-pills {
@@ -591,23 +617,21 @@
         .product-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 0.75rem;
+            gap: 8px;
         }
 
         .product-card {
             background: #FFFFFF;
             border: 1px solid #E2E8F0;
-            border-left: 3px solid #2B7DE9;
             border-radius: 8px;
-            padding: 10px 10px;
+            padding: 10px 12px;
             transition: all 0.2s;
             cursor: pointer;
         }
 
         .product-card:hover {
-            transform: translateY(-1px);
+            border-color: #CBD5E1;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
-            border-left-color: #06B6D4;
         }
 
         .product-category {
@@ -632,19 +656,20 @@
         .category-advanced { color: #475569; }
 
         .product-name {
-            font-size: 0.88rem;
+            font-size: 0.85rem;
             font-weight: 700;
             color: #0A1628;
-            margin-bottom: 4px;
+            margin-bottom: 2px;
+            line-height: 1.3;
         }
 
         .product-description {
-            font-size: 0.72rem;
-            color: #64748B;
-            margin-bottom: 8px;
-            line-height: 1.45;
+            font-size: 0.7rem;
+            color: #94A3B8;
+            margin-bottom: 6px;
+            line-height: 1.4;
             display: -webkit-box;
-            -webkit-line-clamp: 2;
+            -webkit-line-clamp: 1;
             -webkit-box-orient: vertical;
             overflow: hidden;
             word-break: break-word;
@@ -851,10 +876,9 @@
 
         /* Footer */
         footer {
-            background: #F8FAFC;
-            border-top: 1px solid #E2E8F0;
-            padding: 3rem 2rem 2rem;
-            margin-top: 4rem;
+            background: #0A1628;
+            padding: 2.5rem 2rem 2rem;
+            margin-top: 3rem;
         }
 
         .footer-content {
@@ -863,42 +887,43 @@
         }
 
         .footer-logo {
-            font-size: 1.25rem;
-            font-weight: 700;
-            color: #2B7DE9;
-            margin-bottom: 1rem;
+            font-size: 1.1rem;
+            font-weight: 800;
+            color: #FFFFFF;
+            margin-bottom: 0.25rem;
+            letter-spacing: 2px;
         }
 
         .footer-links {
             display: flex;
-            gap: 2rem;
-            margin-bottom: 1.5rem;
+            gap: 1.5rem;
+            margin-bottom: 1rem;
             flex-wrap: wrap;
         }
 
         .footer-links a {
-            color: #475569;
+            color: rgba(255,255,255,0.6);
             text-decoration: none;
-            font-size: 0.875rem;
+            font-size: 0.8rem;
             transition: color 0.2s;
         }
 
         .footer-links a:hover {
-            color: #2B7DE9;
+            color: #FFFFFF;
         }
 
         .footer-disclaimer {
-            font-size: 0.75rem;
-            color: #64748B;
+            font-size: 0.68rem;
+            color: rgba(255,255,255,0.35);
             line-height: 1.6;
-            padding-top: 1.5rem;
-            border-top: 1px solid #E2E8F0;
+            padding-top: 1rem;
+            border-top: 1px solid rgba(255,255,255,0.1);
             max-width: 800px;
         }
 
         .research-only {
             font-weight: 700;
-            color: #DC2626;
+            color: #EF4444;
         }
 
         .hamburger {
@@ -921,15 +946,15 @@
 
         /* Responsive */
         @media (max-width: 768px) {
-            .hero h1 { font-size: 1.3rem; }
-            .hero p { font-size: 0.8rem; }
-            .hero { padding: 1.25rem 1rem; }
+            .hero h1 { font-size: 1.15rem; }
+            .hero p { font-size: 0.72rem; }
+            .hero { padding: 1rem; }
             .section-heading { font-size: 1rem; }
             .section-sub { display: none; }
-            .featured-card { min-width: 180px; }
+            .featured-card { min-width: 120px; }
             nav { display: none; }
             .header-left { gap: 0; }
-            .trust-item { font-size: 0.68rem; padding: 0 12px; }
+            .trust-item { font-size: 0.62rem; padding: 0 10px; }
             .hamburger { display: flex !important; }
         }
 
@@ -1022,7 +1047,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div style="background:#0A1628;text-align:center;padding:7px 16px;font-size:0.7rem;color:rgba(255,255,255,0.85);letter-spacing:0.3px;font-weight:500" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150</div>
+    <div class="promo-bar" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150</div>
 
     <header>
         <div class="header-content">
@@ -1075,7 +1100,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Research-Grade Peptides</h1>
-            <p>44+ compounds for in vitro research · Free reconstitution supplies with every order</p>
+            <p>44+ compounds · ≥98% purity · Free reconstitution supplies included</p>
         </div>
     </section>
 
@@ -1092,7 +1117,7 @@
     <main id="shop">
         <!-- Featured Products Section -->
         <section class="featured-section">
-            <h2 class="section-heading">Popular</h2>
+            <h2 class="section-heading" style="font-size:0.8rem;color:#64748B;font-weight:600;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:0.5rem">Bestsellers</h2>
             <div class="featured-products" id="featuredProducts">
                 <!-- Featured products will be inserted here by JS -->
             </div>
@@ -1100,7 +1125,7 @@
 
         <!-- Catalog Section -->
         <section class="catalog-section" id="categories">
-            <div class="catalog-header">
+            <div class="catalog-header" style="display:none">
                 <h2 class="section-heading" style="font-size:0.85rem">Products</h2>
                 <span class="catalog-count" id="catalogCount">44 products</span>
             </div>
@@ -1218,17 +1243,20 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">PRC PEPTIDES</div>
+            <div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div>
+            <div style="font-size:0.75rem;color:#94A3B8;margin-bottom:1.5rem">Research-grade compounds for in vitro use</div>
             <div class="footer-links">
                 <a href="#shop">Shop</a>
                 <a href="#" onclick="openPage('faq');return false">FAQ</a>
                 <a href="#" onclick="openPage('about');return false">About</a>
                 <a href="https://peptideresourcecenter.com" target="_blank">Resources ↗</a>
-                <a href="mailto:support@prcpeptides.com">support@prcpeptides.com</a>
+                <a href="mailto:support@prcpeptides.com">Contact</a>
             </div>
+            <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
             <div class="footer-disclaimer">
-                <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are intended exclusively for laboratory research and are not intended for human consumption, diagnostic purposes, or therapeutic applications. By accessing this site, you acknowledge that all products are for in vitro research use only.
+                <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are intended exclusively for laboratory research and are not intended for human consumption, diagnostic purposes, or therapeutic applications. Must be 18+ to purchase. By accessing this site, you acknowledge all products are for in vitro research use only.
             </div>
+            <div style="font-size:0.65rem;color:#94A3B8;margin-top:1rem">© 2026 PRC Labs LLC. All rights reserved.</div>
         </div>
     </footer>
 
@@ -1811,6 +1839,16 @@
         document.addEventListener('click', function(e) {
             var dd = document.querySelector('.nav-dropdown');
             if(dd && !dd.contains(e.target)) dd.classList.remove('open');
+        });
+
+        // Header scroll shadow
+        var headerEl = document.querySelector('header');
+        window.addEventListener('scroll', function() {
+            if (window.scrollY > 10) {
+                headerEl.classList.add('scrolled');
+            } else {
+                headerEl.classList.remove('scrolled');
+            }
         });
 
         // Initial render
