Shorten hero subtitle to single line

--- a/shop.html
+++ b/shop.html
@@ -1100,7 +1100,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Research-Grade Peptides</h1>
-            <p>44+ compounds · ≥98% purity · Free reconstitution supplies included</p>
+            <p>44+ compounds · ≥98% purity · Fast US shipping</p>
         </div>
     </section>
 
